--- a/gridcalendar.css
+++ b/gridcalendar.css
@@ -67,6 +67,7 @@
 	line-height: 2em;
 	cursor: pointer;
 	font-weight: normal;
+	font-size: 95%;
 	margin:0; padding:0;
 }
 
@@ -79,11 +80,13 @@
 }
 
 .floatingcal .calcaption {
+	font-size: 70%;
 	text-align: center;
 	color: #fff;
 }
 
 .floatingcal .calmonthheader {
+	font-size: 70%;
 	width: auto;
 }
 
@@ -93,3 +96,8 @@
 #calmonthheader { grid-area: monthheader; }
 #callittlefwd { grid-area: littlefwd; }
 #calwayfwd { grid-area: wayfwd; }
+
+.wkday {
+	font-size: 80%;
+}
+/* */
